# CodSoft

./: .gitignore  README.md
calculator/: README.md  SYSTEM_ARCHITECTURE.md  calculator.py  requirements.txt
contact book/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SYSTEM_ARCHITECTURE.md  admin_middleware.py  admin_user_controller.py  auth_system.py  contact_manager.py  database.py  models.py  pyproject.toml  requirements.txt  run.py  search_engine.py  setup.py  smartconnect_with_login.py  user_creation_dialog.py  validation.py
contact book/.github/: pull_request_template.md
contact book/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contact book/.github/workflows/: ci.yml
password generator/: README.md  SYSTEM_ARCHITECTURE.md  password_generator.py
rock-paper-scissors/: .gitignore  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml
rock-paper-scissors/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  requirements.txt  seed_all.py  socket_handler.py
rock-paper-scissors/backend/middleware/: auth.py
rock-paper-scissors/backend/routes/: admin_routes.py  auth_routes.py  game_routes.py  leaderboard_routes.py  user_routes.py
rock-paper-scissors/backend/utils/: database.py  game_logic.py
rock-paper-scissors/frontend/: .dockerignore  .env.example  .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
rock-paper-scissors/frontend/src/: App.jsx  index.css
rock-paper-scissors/frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
rock-paper-scissors/frontend/src/config/: api.js  firebase.js
rock-paper-scissors/frontend/src/context/: AuthContext.jsx  GameContext.jsx
rock-paper-scissors/frontend/src/pages/: AdminDashboard.jsx  GameMode.jsx  GamePlay.jsx  Home.jsx  Leaderboard.jsx  Login.jsx  OnlineGame.jsx  Profile.jsx  Register.jsx  Settings.jsx
to do list/: .gitignore  README.md  SYSTEM_ARCHITECTURE.md  tasks.json
to do list/backend/: README.md  api.py  mongodb_manager.py  task_manager.py
to do list/frontend/: .env.example  README.md  index.html  package.json  vite.config.js
to do list/frontend/src/: App.jsx  firebase.js
to do list/frontend/src/components/: CalendarView.jsx  Login.jsx  SearchFilter.jsx  TaskForm.jsx  TaskList.jsx  TaskModal.jsx
