[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartconnect"
version = "1.0.0"
description = "A modern, secure desktop contact management system with user authentication"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SmartConnect Team", email = "contact@smartconnect.com"}
]
maintainers = [
    {name = "SmartConnect Team", email = "contact@smartconnect.com"}
]
keywords = [
    "contact management",
    "address book", 
    "desktop application",
    "gui",
    "customtkinter",
    "sqlite",
    "authentication",
    "user management",
    "contacts",
    "crm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Database :: Front-Ends",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Natural Language :: English",
    "Topic :: Communications :: Email :: Address Book"
]
requires-python = ">=3.7"
dependencies = [
    "customtkinter>=5.2.0",
    "bcrypt>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "hypothesis>=6.82.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=65.0.0",
    "wheel>=0.37.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/smartconnect"
Repository = "https://github.com/yourusername/smartconnect"
Documentation = "https://github.com/yourusername/smartconnect/blob/main/README.md"
"Bug Reports" = "https://github.com/yourusername/smartconnect/issues"
Changelog = "https://github.com/yourusername/smartconnect/blob/main/CHANGELOG.md"

[project.scripts]
smartconnect = "run:main"

[tool.setuptools]
packages = ["smartconnect"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.rst"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]